property adjustments including swagger
